GNOME Bugzilla – Bug 732016
Bad string construction
Last modified: 2014-07-15 07:08:23 UTC
Construction error = g_error_new (GRL_CORE_ERROR, GRL_CORE_ERROR_STORE_FAILED, _("Upload failed, '%s', transferred %"G_GUINT64_FORMAT" bytes of %"G_GUINT64_FORMAT" bytes"), upload_status, length, total); in src/dleyna/grl-dleyna-source.c is unfriendly for gettext. Message is broken on macro G_GUINT64_FORMAT.
*** Bug 732777 has been marked as a duplicate of this bug. ***
Created attachment 280632 [details] [review] dleyna: Do not use format constant Make life easier for translators.
Comment on attachment 280632 [details] [review] dleyna: Do not use format constant committed