dleyna: Do not use format constant

Make life easier for translators.

https://bugzilla.gnome.org/show_bug.cgi?id=732016